GearsetPOC/force-app/main/default/objects/Redshift_Redemptions__c/Redshift_Redemptions__c.object-meta.xml
<CustomObject>
    <label>Redshift Redemptions</label>
    <nameField>
        <displayFormat>RRN-{0000000000}</displayFormat>
        <label>Redshift Redemptions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Redshift Redemptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>