GearsetPOC/force-app/main/default/objects/Redshift_Redemptions__c/fields/DepartureDateTime__c.field-meta.xml
<CustomField>
    <fullName>DepartureDateTime__c</fullName>
    <label>DepartureDateTime</label>
    <type>DateTime</type>
</CustomField>