GearsetPOC/force-app/main/default/objects/Redshift_Redemptions__c/fields/DestinationRegion__c.field-meta.xml
<CustomField>
    <fullName>DestinationRegion__c</fullName>
    <label>DestinationRegion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>