GearsetPOC/force-app/main/default/objects/Redshift_Redemptions__c/fields/FareBucket__c.field-meta.xml
<CustomField>
    <fullName>FareBucket__c</fullName>
    <label>FareBucket</label>
    <length>100</length>
    <type>Text</type>
</CustomField>