GearsetPOC/force-app/main/default/objects/Redshift_Redemptions__c/fields/InboundTicketType__c.field-meta.xml
<CustomField>
    <fullName>InboundTicketType__c</fullName>
    <label>InboundTicketType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>