GearsetPOC/force-app/main/default/objects/Redshift_Redemptions__c/fields/InboundTravelClass__c.field-meta.xml
<CustomField>
    <fullName>InboundTravelClass__c</fullName>
    <label>InboundTravelClass</label>
    <length>100</length>
    <type>Text</type>
</CustomField>