GearsetPOC/force-app/main/default/objects/Redshift_Redemptions__c/fields/IsCurrent__c.field-meta.xml
<CustomField>
    <fullName>IsCurrent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCurrent</label>
    <type>Checkbox</type>
</CustomField>