GearsetPOC/force-app/main/default/objects/Redshift_Redemptions__c/fields/IsUpdateOf__c.field-meta.xml
<CustomField>
    <fullName>IsUpdateOf__c</fullName>
    <label>IsUpdateOf</label>
    <length>100</length>
    <type>Text</type>
</CustomField>