GearsetPOC/force-app/main/default/objects/Redshift_Redemptions__c/fields/JourneyType__c.field-meta.xml
<CustomField>
    <fullName>JourneyType__c</fullName>
    <label>JourneyType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>