GearsetPOC/force-app/main/default/objects/Redshift_Redemptions__c/fields/OriginRegion__c.field-meta.xml
<CustomField>
    <fullName>OriginRegion__c</fullName>
    <label>OriginRegion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>