GearsetPOC/force-app/main/default/objects/Redshift_Redemptions__c/fields/OutboundTicketType__c.field-meta.xml
<CustomField>
    <fullName>OutboundTicketType__c</fullName>
    <label>OutboundTicketType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>