GearsetPOC/force-app/main/default/objects/Redshift_Redemptions__c/fields/OutboundTravelClass__c.field-meta.xml
<CustomField>
    <fullName>OutboundTravelClass__c</fullName>
    <label>OutboundTravelClass</label>
    <length>100</length>
    <type>Text</type>
</CustomField>