GearsetPOC/force-app/main/default/objects/Redshift_Redemptions__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <label>Partner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>