GearsetPOC/force-app/main/default/objects/Redshift_Redemptions__c/fields/PointsRedeemed__c.field-meta.xml
<CustomField>
    <fullName>PointsRedeemed__c</fullName>
    <label>PointsRedeemed</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>