GearsetPOC/force-app/main/default/objects/Redshift_Redemptions__c/fields/RedemptionDate__c.field-meta.xml
<CustomField>
    <fullName>RedemptionDate__c</fullName>
    <label>RedemptionDate</label>
    <type>DateTime</type>
</CustomField>