GearsetPOC/force-app/main/default/objects/Redshift_Redemptions__c/fields/VoucherCashValue__c.field-meta.xml
<CustomField>
    <fullName>VoucherCashValue__c</fullName>
    <label>VoucherCashValue</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>