GearsetPOC/force-app/main/default/objects/Redshift_Redemptions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Origin__c</columns>
    <columns>Destination__c</columns>
    <columns>MembershipNumber__c</columns>
    <columns>JourneyType__c</columns>
    <columns>Partner__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>IsUpdateOf__c</columns>
    <columns>IsCurrent__c</columns>
    <columns>Type__c</columns>
    <columns>OutboundTicketType__c</columns>
    <columns>InboundTicketType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>